fixed some alignment in collections
fixed some alignment in collections. But need to make grid responsive.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -71,14 +71,6 @@ a.carousel-control:visited {
   margin: 10px 0 0 42px;
 }
 
-.page-title {
-  margin-top: 30px;
-}
-
-.main-page-title  {
-  margin-top: 20px;
-}
-
 .main-page-title img {
   position: relative;
   left: 600px;
@@ -136,10 +128,6 @@ a.carousel-control:visited {
 
 .row-section-spacer > hr {
   margin: 0px 100px;
-}
-
-.collections-row {
-  margin: 0;
 }
 
 .collections-item {
